--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'nonce-sparedirect'; img-src data:; connect-src 'self'">
     <title>Page not found &middot; GitHub Pages</title>
     <style type="text/css" media="screen">
       body { background-color: #f1f1f1; margin: 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
@@ -29,7 +29,7 @@
       #suggestions { margin-top: 35px; color: #ccc; }
       #suggestions a { color: #666666; font-weight: 200; font-size: 14px; margin: 0 10px; }
     </style>
-    <script type="text/javascript">
+    <script type="text/javascript" nonce="sparedirect">
       // 設定SPA重新導向規則
       var spaProjects = [
         '/trpgtools/savage-worlds/'
