--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'nonce-sparedirect' style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'nonce-sparedirect'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
     <title>Page not found &middot; GitHub Pages</title>
     <style type="text/css" media="screen">
       body { background-color: #f1f1f1; margin: 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
