--- a/trpg/WWS3/251018-線下活動邀請函.html
+++ b/trpg/WWS3/251018-線下活動邀請函.html
@@ -13,7 +13,7 @@
       html, body { margin: 0; padding: 0; min-height: 100%; display: grid; grid-auto-rows: auto; grid-template-rows: 1fr; grid-row: 1; box-sizing: border-box; }
       body {
         font-family: 'LXGW WenKai Mono TC', sans-serif;
-        width: 100%; min-width: 320px; line-height: 1.5; font-size: 16px; font-weight: 400;
+        width: 100%; min-width: 320px; line-height: 1.5; font-size: 1.1rem; font-weight: 400;
         color: #4a2c2a; background: url('https://img.freepik.com/premium-photo/natural-japanese-recycled-paper-texture_118047-530.jpg'), #f0e8d8;
         text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
       }
