--- a/trpg/WWS3/251018-線下活動邀請函.html
+++ b/trpg/WWS3/251018-線下活動邀請函.html
@@ -40,6 +40,7 @@
       footer { margin-top: 3rem; font-style: italic; font-weight: bold; color: #5a3a3a; }
 
       @media (max-width: 600px) {
+        #app { padding: 1rem; }
         #app > .invitation-card { padding: 1.5rem; }
         header > h1 { font-size: 2.2rem; }
         main > section > h2 { font-size: 1.8rem; }
